# mysuru-civic-intelligence-system

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/routes/: chat.py  ingest.py
app/core/: __init__.py  config.py  exceptions.py
app/ingestion/: __init__.py  pipeline.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  chunker.py  document_loader.py  embeddings.py  generator.py  rag.py  retriever.py  vector_store.py
config/: settings.yaml
scripts/: ingest.py
