[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcis"
version = "1.0.0"
description = "Mysuru Civic Intelligence System - RAG-based civic assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
